# font_recognition

./: .gitignore  README.md  dev.ipynb  resnet50.ipynb
serving/: README.md  api.py  requirements.txt  transform.py  utils.py
serving/model/smallresnet/: class_encoding.json
training/: README.md  pyproject.toml
training/artifacts/checkpoints/smallresnet/: best.pt
training/artifacts/evaluation_reports/: mobilenet  smallresnet
training/artifacts/predictions/smallresnet/: best_predictions.csv
training/dev/: dev.ipynb
training/scripts/: evaluate.py  inference.py  train.py
training/src/training/config/: __init__.py  config.py
training/src/training/data_pipelines/: __init__.py  test_loader.py  train_loader.py  transforms.py  utils.py
training/src/training/evaluation/: evaluator.py
training/src/training/inference/: __init__.py  inference.py
training/src/training/models/: __init__.py  base.py  mobilenet.py  resnet18.py  small_resnet.py  utils.py
training/src/training/trainer/: trainer.py
training/src/training/utils/: __init__.py  export_onnx.py  generate_metadata.py
